fixed calendar alignment with box-shadow

--- a/code/app/src/client/calendar/Week.scss
+++ b/code/app/src/client/calendar/Week.scss
@@ -1,8 +1,6 @@
 @import '../styles/variables';
 @import '../styles/mixins';
 
-
-
 .Week {
   $border-width-rem: pxToRem(1);
 
@@ -19,7 +17,13 @@
 
 
   &.last-one {
-    border-bottom: $border-width-rem solid $grey-300;
+    /* using "box-shadow" insteadd of "border-bottom  for last element since with border bottom it's
+      hard to make sure that content below is not pushed 1px down, since when max-height is set and there is
+      no content, border occupies element's content area and when content is above max height border
+      pushes everything down. To reproduce see empty week and week with L-XL events*/
+    box-shadow: 0 $border-width-rem 0 $grey-300;
+
+    //border-bottom: $border-width-rem solid $grey-300;
     //margin-bottom: -$border-width-rem;
   }
 }
